# modbusctl

./: CMakeLists.txt  README.md  deploy.sh
src/: fconf.c  fconf.h  futil.h  main.c
